# Battleship-CPP

./: .gitignore  CMakeLists.txt  main.cpp
cpp/: Case.cpp  Game.cpp  Player.cpp  Ship.cpp
header/: Case.h  Game.h  Player.h  Ship.h
